# AppDeployment

./: .gitattributes  .gitignore  CMakeCache.txt  README.md
AApneProgramHer/: KKOGSK.exe – Snarvei.lnk
SKOGKK/: CMakeLists.txt
SKOGKK/KKOGSK/: BGandFontResource.qrc  CMakeLists.txt  KKOGSK_nb_NO.ts  MyRes.qrc  MyResource.qrc  ResourceButton.qrc  ResourcePictures1.qrc  ResourcePictures2.qrc  avatardialog.cpp  avatardialog.h  avatardialog.ui  bodyquestiondialog.cpp  bodyquestiondialog.h  bodyquestiondialog.ui  calenderdialog.cpp  calenderdialog.h  calenderdialog.ui  changepwdialog.cpp  changepwdialog.h  changepwdialog.ui  choosetestdialog.cpp  choosetestdialog.h  choosetestdialog.ui  cmrc.h  commentdialog.cpp  commentdialog.h  commentdialog.ui  homepagedialog.cpp  homepagedialog.h  homepagedialog.ui  jumpqdialog.cpp  jumpqdialog.h  jumpqdialog.ui  logindialog.cpp  logindialog.h  logindialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  (+59 more)
build-SKOGKK-Desktop_Qt_5_13_0_MSVC2017_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  SKOGKK.cbp  build.ninja  cmake_install.cmake  rules.ninja
build-SKOGKK-Desktop_Qt_5_13_0_MSVC2017_64bit-Debug/.cmake/api/v1/reply/: cache-v2-97d4b133af58f23eb8e0.json  cache-v2-d0c91c5cf49b68d28484.json  cmakeFiles-v1-3cb4a4dcfd592a70a3e6.json  cmakeFiles-v1-438d78a5cb1500dfd186.json  cmakeFiles-v1-5fa3695166754ff9ebc9.json  codemodel-v2-1a238d64669e4283b541.json  codemodel-v2-2a12cd4e42b9e7fc890a.json  codemodel-v2-6a530641f35156be0710.json  codemodel-v2-8691843bba83899250de.json  codemodel-v2-bdfe5012e3b702040808.json  codemodel-v2-d63cb08cd12407fd433f.json  index-2020-04-11T16-29-27-0503.json  index-2020-05-04T19-46-10-0351.json  index-2020-05-05T00-21-59-0924.json  index-2020-05-08T11-46-47-0601.json  index-2020-05-11T20-11-14-0917.json  (+9 more)
build-SKOGKK-Desktop_Qt_5_13_0_MSVC2017_64bit-Debug/KKOGSK/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Glad_fjes.qrc.depends  KKOGSK.cbp  KKOGSK.ilk  SKOGKK.cbp  build.ninja  cmake_install.cmake  foo-resources.lib  moc_avatardialog.cpp  moc_avatardialog.cpp_parameters  moc_bodyquestiondialog.cpp  moc_bodyquestiondialog.cpp_parameters  moc_calenderdialog.cpp  moc_calenderdialog.cpp_parameters  moc_changepwdialog.cpp  moc_changepwdialog.cpp_parameters  moc_choosetestdialog.cpp  moc_choosetestdialog.cpp_parameters  moc_cmrc.cpp_parameters  moc_commentdialog.cpp  moc_commentdialog.cpp_parameters  moc_fivepicquestiondialog.cpp  moc_fivepicquestiondialog.cpp_parameters  moc_homepagedialog.cpp  moc_homepagedialog.cpp_parameters  moc_logindialog.cpp  moc_logindialog.cpp_parameters  moc_mainwindow.cpp  moc_mainwindow.cpp_parameters  moc_mainwindowuserdialog.cpp  moc_mainwindowuserdialog.cpp_parameters  moc_onepicquestiondialog.cpp  moc_onepicquestiondialog.cpp_parameters  moc_patientdialog.cpp  moc_patientdialog.cpp_parameters  moc_patientinformationdialog.cpp  moc_patientinformationdialog.cpp_parameters  moc_pointquestiondialog.cpp  (+63 more)
build-SKOGKK-Desktop_Qt_5_13_0_MSVC2017_64bit-Debug/KKOGSK/KKOGSK/: KKOGSK.cbp  cmake_install.cmake  moc_avatardialog.cpp_parameters  moc_calenderdialog.cpp_parameters  moc_changepwdialog.cpp_parameters  moc_cmrc.cpp_parameters  moc_commentdialog.cpp_parameters  moc_homepagedialog.cpp_parameters  moc_logindialog.cpp_parameters  moc_mainwindow.cpp_parameters  moc_patientdialog.cpp_parameters  moc_patientinformationdialog.cpp_parameters  moc_profiledialog.cpp_parameters  moc_qt5databasedialog.cpp_parameters  moc_questiondialog.cpp_parameters  moc_registerdialog.cpp_parameters  moc_resourcehandlerdialog.cpp_parameters  moc_resultsdialog.cpp_parameters  moc_rewarddialog.cpp_parameters  moc_secondwindowdialog.cpp_parameters  moc_settingsdialog.cpp_parameters  moc_tasksdialog.cpp_parameters  moc_workerprofiledialog.cpp_parameters  moc_workerresultdialog.cpp_parameters
build-SKOGKK-Desktop_Qt_5_13_0_MSVC2017_64bit-Debug/KKOGSK/KKOGSK/__cmrc_foo-resources/: lib_.cpp
build-SKOGKK-Desktop_Qt_5_13_0_MSVC2017_64bit-Debug/KKOGSK/__cmrc_foo-resources/: lib_.cpp
build-SKOGKK-Desktop_Qt_5_13_0_MSVC2017_64bit-Debug/KKOGSK/foo-resources_autogen/: KKOGSK - Snarvei.lnk
src/Wt/: WRasterImage-d2d1.C
(+7 files in other folders)
